# math-modeling-agent

./: .gitignore  README.md  dump.rdb  start.bat  stop.bat
backend/: .env.dev  .env.example  .env.local.example  .env.prod.example  Dockerfile.sandbox  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/config/: a2a_config.py  database.py  mcm_latex_template.toml  mcm_template.toml  md_template.toml  prompts.toml  setting.py
backend/app/config/code_templates/: __init__.py  classification_templates.py  clustering_templates.py  dp_templates.py  evaluation_templates.py  fitting_templates.py  game_theory_templates.py  graph_templates.py  ode_templates.py  optimization_templates.py  prediction_templates.py  regression_templates.py  statistics_templates.py  template_registry.py  validation_templates.py
backend/app/config/latex_templates/: easymcm2.sty  mcm_main.tex  new_command.tex
backend/app/core/: award_winning_workflow.py  enhanced_workflow.py  error_recovery.py  flows.py  interactive_workflow.py  knowledge_base.py  math_model_workflow.py  workflow.py  workflow_enhancer.py
backend/app/core/a2a/: __init__.py  handoff_manager.py
backend/app/core/agents/: __init__.py  abstract_generator.py  agent.py  benchmark_analysis_agent.py  coder_agent.py  coordinator_agent.py  data_understanding_expert.py  experiment_designer.py  expert_agent.py  interactive_coordinator_agent.py  model_selector.py  modeler_agent.py  problem_analyzer.py  problem_insight_analyzer.py  reviewer.py  (+3 more)
backend/app/models/: user.py  user_api_config.py  user_output.py
backend/app/observability/: __init__.py  metrics.py  structured_log.py  tracing.py
backend/app/routers/: auth_router.py  common_router.py  files_router.py  interactive_modeling_router.py  modeling_router.py  secure_files_router.py  ws_router.py
backend/app/schemas/: A2A.py  api_models.py  contracts.py  enums.py  request.py  response.py  tool_result.py
backend/app/services/: redis_manager.py  tenant_service.py  user_config_service.py  user_service.py  workflow_service.py
backend/app/tests/: conftest.py  test_a2a.py  test_abstract_data_preview_stages.py  test_agent_base.py  test_agent_registry.py  test_checkpoints.py  test_common_utils.py  test_coordinator_setup_stages.py  test_core_agents.py  test_e2b.py  test_error_recovery.py  test_evaluation_metrics.py  test_exceptions.py  test_file_validator.py  test_finalize_problem_analysis_stages.py  test_hil.py  test_image_analyzer.py  test_integration_chains.py  test_json_parser.py  test_knowledge_base.py  test_llm.py  test_llm_metering.py  test_memory_manager.py  test_metering.py  test_model_comparison.py  test_modeling.py  test_modeling_router.py  test_paper_quality.py  test_pipeline.py  test_prompts.py  test_rate_limiter.py  test_redis_manager.py  test_routers.py  test_sandbox.py  test_security.py  test_settings.py  test_stage_integration.py  test_stage_pure_functions.py  test_structured_markers.py  test_task_recovery.py  (+6 more)
backend/app/tools/: base_interpreter.py  code_sanitizer.py  docker_interpreter.py  e2b_interpreter.py  image_analyzer.py  interpreter_factory.py  local_interpreter.py  notebook_serializer.py  openalex_scholar.py
backend/app/utils/: RichPrinter.py  auth.py  common_utils.py  data_recorder.py  exceptions.py  file_validator.py  json_parser.py  middleware.py  rate_limiter.py  security.py  startup_check.py  task_registry.py  track.py
(+213 files in other folders)
