[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofile>=3.9.0,<4.0",
    # 注意: aioredis 已被 redis>=5.x 的 redis.asyncio 模块取代，
    # 但 redis_manager.py 中使用 `import redis.asyncio as aioredis` 别名，
    # 实际依赖的是 redis 包而非 aioredis 包，因此移除 aioredis。
    "aiosqlite>=0.22.1",
    "ansi2html>=1.9.2,<2.0",
    "celery>=5.4.0,<6.0",
    "e2b-code-interpreter>=1.0.5,<2.0",
    "fastapi[standard]>=0.115.8,<1.0",
    "httpx[socks]>=0.28.1,<1.0",
    "ipykernel>=6.29.5,<7.0",
    "jupyter-client>=8.6.3,<9.0",
    "litellm>=1.69.0,<2.0",
    "loguru>=0.7.3,<1.0",
    "matplotlib>=3.10.1,<4.0",
    "nbformat>=5.10.4,<6.0",
    "numpy>=2.2.5,<3.0",
    "openai>=1.63.2,<2.0",
    "openpyxl>=3.1.5,<4.0",
    "pandas>=2.2.3,<3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.10.6,<3.0",
    "pydantic-settings>=2.8.0,<3.0",
    "pypandoc-binary>=1.15,<2.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=5.2.1,<6.0",
    "scikit-learn>=1.6.1,<2.0",
    "scipy>=1.15.2,<2.0",
    "seaborn>=0.13.2,<1.0",
    "semanticscholar>=0.10.0,<1.0",
    "shap>=0.47.2,<1.0",
    "sqlalchemy>=2.0.46",
    "statsmodels>=0.14.4,<1.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "websocket>=0.2.1,<1.0",
    "xgboost>=3.0.0,<4.0",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "mypy>=1.8.0,<2.0",
]



[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# 规则组说明:
# E4/E7/E9: pycodestyle 错误（导入、语句、运行时错误）
# F: Pyflakes（未使用变量、未定义名称等）
# I: isort（import 排序）
# B: flake8-bugbear（常见编程陷阱）
# S: flake8-bandit（安全规则）
# UP: pyupgrade（Python 现代化写法升级）
select = ["E4", "E7", "E9", "F", "I", "B", "S", "UP"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

